# desim

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sensitivity.ipynb
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: deshima_sensitivity.atmosphere.doctree  deshima_sensitivity.doctree  deshima_sensitivity.galaxy.doctree  deshima_sensitivity.instruments.doctree  deshima_sensitivity.physics.doctree  deshima_sensitivity.plotting.doctree  deshima_sensitivity.simulator.doctree
.github/workflows/: tests.yml
_apidoc/: deshima_sensitivity.atmosphere.html  deshima_sensitivity.galaxy.html  deshima_sensitivity.html  deshima_sensitivity.instruments.html  deshima_sensitivity.physics.html  deshima_sensitivity.plotting.html  deshima_sensitivity.simulator.html
_modules/: index.html
_modules/deshima_sensitivity/: atmosphere.html  galaxy.html  instruments.html  physics.html  plotting.html  simulator.html
deshima_sensitivity/: __init__.py  instruments.py  plotting.py  simulator.py
docs/: conf.py
tests/: test_package.py
