[tool.poetry]
name = "deshima-sensitivity"
version = "0.3.1"
description = "Sensitivity calculator for DESHIMA-type spectrometers"
authors = [
    "Akira Endo <a.endo@tudelft.nl>",
    "Akio Taniguchi <taniguchi.akio@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deshima-dev/deshima-sensitivity"
documentation = "https://deshima-dev.github.io/deshima-sensitivity"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
matplotlib = ">=3.8"
numpy = ">=1.26"
scipy = ">=1.13"
pandas = ">=2.2"
jupyter-io = ">=1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10"
ipython = "^8.30"
myst-parser = "^4.0"
notebook = "^7.3"
pydata-sphinx-theme = "^0.16"
pytest = "^8.3"
sphinx = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
